# Simple_Geant4_example

./: .CMakeLists.txt.swp  .ExG4PrimaryGenerationAction01.cc.swp  CMakeLists.txt  ExG4.cc  ExG4ActionInitialization01.cc  Makefile  Simple_Geant4_example.cc  run1.mac  run2.mac  vis.mac
include/: Ex4G4DetectorConstructor01.hh  ExG4ActionInitialization01.hh  ExG4DetectorConstruction01.hh  ExG4EventAction01.hh  ExG4PrimaryGeneratorAction01.hh  ExG4RunAction01.hh  ExG4SteppingAction01.hh
source/: ExG4ActionInitialization01.cc  ExG4DcetectorConstruction01.cc  ExG4DetectorConstruction01.cc  ExG4EventAction01.cc  ExG4PrimaryGeneratorAction01.cc  ExG4RunAction01.cc  ExG4SteppingAction01.cc
